# nova-drone

nova_gz/models/parrot_nova_2/: model.config  model.sdf
nova_gz/worlds/: nova.sdf
nova_interface/: CMakeLists.txt  package.xml
nova_interface/src/: publisher_motor_speed.cpp  subscriber_altimeter.cpp  subscriber_imu.cpp
nova_main/: package.xml  setup.cfg  setup.py
nova_main/config/: nova.yaml
nova_main/launch/: nova.launch.py
nova_processing/: CMakeLists.txt  package.xml
nova_processing/include/nova_processing/: nv.hpp  nv_enums.hpp  nv_math.hpp  nv_types.hpp
nova_processing/src/: log_imu.cpp
nova_tests/: CMakeLists.txt  package.xml
nova_tests/src/: log_imu.cpp  mat_mul.txt
